<resources>
    <string name="app_name">FitnessApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter">Авторизироваться</string>
    <string name="register">Зарегистрироваться</string>
    <string name="enter_email">Введите почту</string>
    <string name="create_a_password">Придумайте пароль</string>
    <string name="repeat_password">Подтвердите пароль</string>
    <string name="username">UserName</string>
    <string name="fitness_app_name">FITNESS\nAPP</string>
    <string name="home_title">Главная</string>
    <string name="statistics_title">Статистика</string>
    <string name="profile_title">Профиль</string>
    <string name="settings_title">Настройки</string>
    <string name="change_language">Поменять язык</string>
    <string name="exit_from_account">Выйти из аккаунта</string>
    <string name="continue_text">продолжить</string>
    <string name="how_to_do_this_exercise">Как выполнять данное упражнение:</string>
    <string name="equipment">Оборудование:</string>
    <string name="variants">Варианты упражнения:</string>
    <string name="litres">Л</string>
    <string name="you_should_be_drinking">вам следует пить</string>
    <string name="average_weight">Средний вес:</string>
    <string name="kg">кг</string>
    <string name="of_fluids_a_day">жидкости в день</string>
    <string name="exercises">упражнения</string>
    <string name="food">еда</string>
    <string name="bmi">Ваш BMI</string>
    <string name="water_consumption">потребление воды</string>
    <string name="programs">программы тренировок</string>
    <string name="add_your_weight">добавить вес</string>
    <string name="enter_username">Введите имя</string>
    <string name="minus">—</string>
    <string name="plus">+</string>
    <string name="age_in_years">Возраст (Лет)</string>
    <string name="weight_kg">Вес (Кг)</string>
    <string name="height_cm">Рост (см)</string>
    <string name="gender">Пол</string>
    <string name="dot">.</string>
    <string name="age">Возраст</string>
    <string name="last_added_weight">Последние данные о весе (кг)</string>
    <string name="added_height">Данные о росте (см)</string>
    <string name="bmr">Ваш BMR</string>
    <string name="core_muscles">Основные мышцы:</string>
    <string name="additional_muscles">Дополнительные мышцы:</string>
    <string name="stabilizing_muscles">Стабилизирующие мышцы:</string>
</resources>