<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/fourth_colour">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/exerciseNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Exercise_name"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_marginTop = "10dp"
            android:layout_marginStart = "10dp"
            android:layout_marginEnd = "10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/first_colour"
            android:text="@string/equipment"/>

        <TextView
            android:id="@+id/inventoryTV"
            android:layout_marginTop = "10dp"
            android:layout_marginStart = "10dp"
            android:layout_marginEnd = "10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:layout_marginTop = "10dp"
            android:layout_marginStart = "10dp"
            android:layout_marginEnd = "10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/first_colour"
            android:text="@string/variants"/>

        <TextView
            android:id="@+id/variantsTV"

            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_marginTop = "10dp"
            android:layout_marginStart = "10dp"
            android:layout_marginEnd = "10dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_width="match_parent"
            android:id="@+id/recyclerViewPictures"
            android:layout_margin = "10dp"
            tools:listitem="@layout/rv_item_exercise_pictures"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop = "10dp"
            android:layout_marginStart = "10dp"
            android:layout_marginEnd = "10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/first_colour"
            android:text="@string/core_muscles"/>

        <TextView
            android:id="@+id/coreMusclesTV"
            android:layout_width="wrap_content"
            android:layout_marginTop = "10dp"
            android:layout_marginStart = "10dp"
            android:layout_marginEnd = "10dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:layout_marginTop = "10dp"
            android:layout_marginStart = "10dp"
            android:layout_marginEnd = "10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/first_colour"
            android:text="@string/additional_muscles"/>

        <TextView
            android:id="@+id/additionalMusclesTV"
            android:layout_width="wrap_content"
            android:layout_marginTop = "10dp"
            android:layout_marginStart = "10dp"
            android:layout_marginEnd = "10dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:layout_marginTop = "10dp"
            android:layout_marginStart = "10dp"
            android:layout_marginEnd = "10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/first_colour"
            android:text="@string/stabilizing_muscles"/>

        <TextView
            android:id="@+id/stabilizingMusclesTV"
            android:layout_width="wrap_content"
            android:layout_margin = "10dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.cardview.widget.CardView>