<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"

    android:orientation="vertical"
    tools:context=".fragments.RegistrationFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:indeterminateDrawable="@drawable/spinner_ring"
        android:indeterminateOnly="true"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:hint="@string/enter_email"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            style="@style/BoxesStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/text_cursor"
                android:autofillHints="emailAddress"
                android:textAlignment="viewStart"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_username"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            style="@style/BoxesStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/text_cursor"
                android:textAlignment="viewStart"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:hint="@string/create_a_password"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            app:passwordToggleTint="@color/white"
            app:passwordToggleEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/white"
            style="@style/BoxesStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordIET"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:maxLength="20"
                android:textSize="22sp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/text_cursor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:hint="@string/repeat_password"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:counterEnabled="true"
            app:counterTextColor="@color/white"
            app:counterMaxLength="20"
            style="@style/BoxesStyle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_passwordIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:singleLine="true"
                android:maxLength="20"
                android:textCursorDrawable="@drawable/text_cursor"
                android:inputType="textPassword"
                android:autofillHints="password" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/regBtn"
            android:background="@drawable/shape_for_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:textColor="@color/white"/>

    </LinearLayout>

</FrameLayout>