<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    tools:context=".fragments.PhysicalIndexesFragment">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:indeterminateDrawable="@drawable/spinner_ring"
        android:indeterminateOnly="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:id="@+id/linearLayoutAge"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/shape_for_buttons"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/age_in_years"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ageET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textCursorDrawable="@color/white"
            android:layout_marginBottom="10dp"
            android:minWidth="40dp"
            android:background="@android:color/transparent"
            android:inputType="number"
            android:maxLength="3"
            android:singleLine="true"
            android:text="20"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAgeMinus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:background="@drawable/shape_for_phi_fragment_buttons"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginEnd="30dp"
                app:layout_constraintEnd_toStartOf="@+id/buttonAgePlus"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAgePlus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                android:background="@drawable/shape_for_phi_fragment_buttons"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/plus"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/shape_for_buttons"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/weight_kg"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/weightET"
                android:textCursorDrawable="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:inputType="number"
                android:maxLength="3"
                android:textStyle="bold"
                android:singleLine="true"
                android:text="80"
                android:minWidth="40dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="50sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:text="@string/dot"/>
            <EditText
                android:id="@+id/weightETFraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textCursorDrawable="@color/white"
                android:layout_marginBottom="10dp"
                android:minWidth="40dp"
                android:background="@android:color/transparent"
                android:inputType="number"
                android:maxLength="1"
                android:textStyle="bold"
                android:singleLine="true"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="50sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonWeightMinus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:background="@drawable/shape_for_phi_fragment_buttons"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginEnd="30dp"
                app:layout_constraintEnd_toStartOf="@+id/buttonWeightPlus"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonWeightPlus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                android:background="@drawable/shape_for_phi_fragment_buttons"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/plus"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/shape_for_buttons"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAge">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/height_cm"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/heightET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="number"
            android:maxLength="3"
            android:textCursorDrawable="@color/white"
            android:minWidth="40dp"
            android:text="180"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/heightSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:value="180"
            app:thumbColor="@color/first_colour"
            app:tickVisible="false"
            app:trackColor="@color/white"
            android:stepSize="1"
            android:valueFrom="100"
            android:valueTo="250" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/shape_for_buttons"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutHeight">

    <TextView
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:text="@string/gender"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />



    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <RadioButton
            android:id="@+id/male_radiobutton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/male_icon"
            android:backgroundTint="@drawable/selector_for_radiobutton"
            android:button="@null"
            android:checked="true" />

        <RadioButton
            android:id="@+id/female_radiobutton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/female_icon"
            android:backgroundTint="@drawable/selector_for_radiobutton"
            android:button="@null" />
    </RadioGroup>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@drawable/shape_for_buttons"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>